feat(order): ensure transactional order correctness